// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Step 2 render after button is clicked 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main fullHeight"
    >
      <div>
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main containerLayout"
        >
          <h2
            class="StyledProps--font StyledProps--font-h2 StyledProps--main"
            level="2"
            style="font-size: 18px;"
          >
            ce.connector.AWS.crossAccountRole.title
          </h2>
          <div
            class="StyledProps--font StyledProps--main StyledProps--padding-top-large StyledProps--padding-bottom-large"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-weight-bold"
            >
              ce.connector.AWS.crossAccountRole.text
            </p>
            <div
              class="StyledProps--font StyledProps--main StyledProps--background-blue300 StyledProps--padding-large StyledProps--margin-top-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-normal"
                style="line-height: 25px;"
              >
                ce.connector.AWS.crossAccountRole.requirementExplanation
              </p>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main"
          >
            <button
              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--color StyledProps--color-blue700 StyledProps--intent-primary Button--with-current-color Button--without-shadow"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--color StyledProps--color-blue700"
                >
                  ce.connector.AWS.crossAccountRole.instructionLabel
                </p>
              </span>
            </button>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
          >
            <div
              class="bp3-form-group"
            >
              <label
                class="bp3-label"
                for="externalID"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="connectionDetails_externalID"
                >
                  ce.connector.AWS.crossAccountRole.externalID
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="externalID"
                    type="text"
                    value="mockexID"
                  />
                </div>
              </div>
            </div>
            <div
              class="bp3-form-group"
            >
              <label
                class="bp3-label"
                for="roleARN"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="connectionDetails_roleARN"
                >
                  ce.connector.AWS.crossAccountRole.arn
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="roleARN"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div>
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  ce.connector.AWS.crossAccountRole.templateLaunchText
                </span>
              </button>
            </div>
            <div>
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--withRightIcon"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  ce.connector.AWS.overview.submitText
                </span>
                <span
                  class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                  icon="chevron-right"
                >
                  <svg
                    data-icon="chevron-right"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      chevron-right
                    </desc>
                    <path
                      d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Test Step 2 renders without crashing 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main fullHeight"
    >
      <div>
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main containerLayout"
        >
          <h2
            class="StyledProps--font StyledProps--font-h2 StyledProps--main"
            level="2"
            style="font-size: 18px;"
          >
            ce.connector.AWS.crossAccountRole.title
          </h2>
          <div
            class="StyledProps--font StyledProps--main StyledProps--padding-top-large StyledProps--padding-bottom-large"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-weight-bold"
            >
              ce.connector.AWS.crossAccountRole.text
            </p>
            <div
              class="StyledProps--font StyledProps--main StyledProps--background-blue300 StyledProps--padding-large StyledProps--margin-top-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-normal"
                style="line-height: 25px;"
              >
                ce.connector.AWS.crossAccountRole.requirementExplanation
              </p>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main"
          >
            <button
              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--color StyledProps--color-blue700 StyledProps--intent-primary Button--with-current-color Button--without-shadow"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--color StyledProps--color-blue700"
                >
                  ce.connector.AWS.crossAccountRole.instructionLabel
                </p>
              </span>
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;
